--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0"
   }
