--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.10.1",
+    "discord-command-parser": "^1.5.3",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0"
   }
